sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value debut
  debut=0; fin=getNombreValeurs()-2
  ^AlgCocktailSort2:4: error: not found: value fin
  debut=0; fin=getNombreValeurs()-2
           ^AlgCocktailSort2:10: error: not found: value debut
    for (i <- debut to fin){
              ^AlgCocktailSort2:10: error: not found: value fin
    for (i <- debut to fin){
                       ^AlgCocktailSort2:13: error: not found: value fin
        fin=fin-1
        ^AlgCocktailSort2:17: error: not found: value debut
    while (k>=debut){
              ^AlgCocktailSort2:20: error: not found: value debut
        debut=debut+1
        ^